refactor clases jaxb y test para extraer datos de factura con xpath